@@ -32,6 +32,10 @@ The format is defined in `PARM parameter/topology file specification`_.
 
 .. _`PARM parameter/topology file specification`:
    http://ambermd.org/formats.html#topology
+
+.. VERSIONCHANGED:: 0.7.6 
+   parses both amber10 and amber12 formats
+
 """
 
 import MDAnalysis.core
@@ -47,6 +51,11 @@ def parse(filename):
 
     :Returns: MDAnalysis internal *structure* dict.
     """
+    formatversion = 10
+    for line in open(filename):
+        if line.startswith("%FLAG ATOMIC_NUMBER"):
+           formatversion = 12
+           break
     # Open and check top validity
     ######  Reading header info POINTERS  #################
     topfile = open(filename,'r')
@@ -89,7 +98,33 @@ def parse(filename):
         else:
                 parsefunc(next_line, atoms_per, data_struc, structure, numlines)
 
-    sections = [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
+    sections = {12:
+               [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
+                ("CHARGE",1, 5, __parsesection_,"_charge",0),
+                ("ATOMIC_NUMBER", 1, 10, __parsesectionint_,"_skip",0),
+                ("MASS",1, 5, __parsesection_,"_mass",0),
+                ("ATOM_TYPE_INDEX", 1, 10, __parsesectionint_,"_atom_type",0),
+                ("NUMBER_EXCLUDED_ATOMS", 1, 10, __parseskip_,"_skip",8),
+                ("NONBONDED_PARM_INDEX", 1, 10, __parseskip_,"_skip",8),
+                ("RESIDUE_LABEL", 1, 20, __parseatoms_, "_resname",11),
+                ("RESIDUE_POINTER", 2, 10, __parsesectionint_,"_respoint",11),
+                ("BOND_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                ("BOND_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
+                ("ANGLE_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                ("ANGLE_EQUIL_VALUE", 1, 5, __parseskip_,"_skip",8),
+                ("DIHEDRAL_FORCE_CONSTANT", 1, 5, __parseskip_,"_skip",8),
+                ("DIHEDRAL_PERIODICITY", 1, 5, __parseskip_,"_skip",8),
+                ("DIHEDRAL_PHASE", 1, 5, __parseskip_,"_skip",8),
+                ("SOLTY", 1, 5, __parseskip_,"_skip",8),
+                ("LENNARD_JONES_ACOEF", 1, 5, __parseskip_,"_skip",8),
+                ("LENNARD_JONES_BCOEF", 1, 5, __parseskip_,"_skip",8)],
+                #("BONDS_INC_HYDROGEN", 2, 4, __parsebond_, "_bonds",2),
+                #("ANGLES_INC_HYDROGEN", 3, 3, __parsesection_, "_angles"),
+                #("DIHEDRALS_INC_HYDROGEN", 4, 2, __parsesection_, "_dihe")]
+                #("NIMPHI", 4, 2, __parsesection_, "_impr"),
+                #("NDON", 2, 4, __parsesection_,"_donors"),
+                #("NACC", 2, 4, __parsesection_,"_acceptors")]
+                10: [("ATOM_NAME", 1, 20, __parseatoms_, "_name",0),
                 ("CHARGE",1, 5, __parsesection_,"_charge",0),
                 ("MASS",1, 5, __parsesection_,"_mass",0),
                 ("ATOM_TYPE_INDEX", 1, 10, __parsesectionint_,"_atom_type",0),
@@ -113,49 +148,46 @@ def parse(filename):
                 #("NIMPHI", 4, 2, __parsesection_, "_impr"),
                 #("NDON", 2, 4, __parsesection_,"_donors"),
                 #("NACC", 2, 4, __parsesection_,"_acceptors")]
-
+                }
     try:
-        for info in sections:
-            parse_sec(info)
-    except StopIteration:
+        structure = {}
+        for info in sections[formatversion]:
+             parse_sec(info)
+    except StopIteration: 
         raise TOPParseError("The TOP file didn't contain the minimum required section of ATOM_NAME")
     # Completing info respoint to include all atoms in last resid
-    structure["_respoint"].append(sys_info[0]+1)
+    structure["_respoint"].append(sys_info[0])
+    structure["_respoint"][-1] = structure["_respoint"][-1] + 1 
     topfile.close()
 
     atoms = [None,]*sys_info[0]
     from MDAnalysis.core.AtomGroup import Atom
     index = 0
     j = 0
-    structure_items = structure.items()
     for i in range(sys_info[0]):
-        if structure.keys()[0] == "_charge":
-                index += 1
-                charge = MDAnalysis.core.units.convert(structure_items[0][1][i],
-                                                       'Amber', MDAnalysis.core.flags['charge_unit'])
-                if structure_items[5][1][j] <= index < structure_items[5][1][j+1]:
-                        resid = j + 1
-                        resname = structure_items[1][1][j]
-                else:
-                        j += 1
-                        resid = j + 1
-                        resname = structure_items[1][1][j]
-                mass = structure_items[2][1][i]
-                atomtype = structure_items[3][1][i]
-                atomname = structure_items[4][1][i]
-                segid = 'SYSTEM'  # does not exist in Amber
+        index += 1
+        charge = MDAnalysis.core.units.convert(structure["_charge"][i],'Amber', MDAnalysis.core.flags['charge_unit'])
+        if structure["_respoint"][j] <= index < structure["_respoint"][j+1]:
+             resid = j + 1  
+             resname = structure["_resname"][j]
         else:
-                raise TOPParseError("Something is screwy with this top file")
+             j += 1
+             resid = j + 1
+             resname = structure["_resname"][j]
+        mass = structure["_mass"][i]
+        atomtype = structure["_atom_type"][i]
+        atomname = structure["_name"][i]
+        segid = 'SYSTEM'  # does not exist in Amber
+        
         atom_desc = Atom(index-1,atomname,atomtype,resname,resid,segid,mass,charge)
         atoms[i] = atom_desc
-    del structure_items
     final_structure["_atoms"] = atoms
     final_structure["_numatoms"] = sys_info[0]
     return final_structure
 
 def __parseskip_(lines, atoms_per, attr, structure, numlines):
     section = []
-    lines()
+    ##lines()
     while (lines()[:5] != "%FLAG"):
         pass
 
@@ -211,5 +243,9 @@ def __parseatoms_(lines, atoms_per, attr, structure, numlines):
         l = lines()
         # Subtract 1 from each number to ensure zero-indexing for the atoms
         for j in range(0, len(x.entries)):
-            section.append(l[x.entries[j].start:x.entries[j].stop].strip())
+            if l[x.entries[j].start:x.entries[j].stop] != '':
+                 #print l[x.entries[j].start:x.entries[j].stop]
+                 section.append(l[x.entries[j].start:x.entries[j].stop].strip())
+            else:
+                 continue 
     structure[attr] = section
